# aws-msk-iam-sasl-signer-rs

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yaml
examples/: consumer.rs  producer.rs
src/: error.rs  lib.rs  test.rs
tests/: rdkafka.rs
